<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_gorup">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_order"
            app:actionViewClass="android.widget.TextView" />

    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:onClick="signout"
            android:title="@string/menu_signout" />
    </group>
</menu>
